...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Number" id="ISd-Ta-l69">
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-13"/>
                    </tabBarItem>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Max number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLw-s6-Vzk">
                                                    <rect key="frame" x="16" y="11" width="343" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Increment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0c-9x-Quf">
                                                    <rect key="frame" x="16" y="11" width="343" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Current number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWW-L1-i09">
                                                    <rect key="frame" x="16" y="11" width="343" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EXD-Kc-Q98">
                                        <rect key="frame" x="0.0" y="504.5" width="343" height="30.5"/>
                                        <state key="normal" title="Reset"/>
                                        <connections>
                                            <action selector="resetPressed:" destination="MUp-gB-v1q" eventType="primaryActionTriggered" id="n0S-xc-94X"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="btB-dW-RWG" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" id="hGO-f2-mcs">
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-13"/>
                    </tabBarItem>
...
